installed toasify and set up phone number authentication

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,15 @@
     background-size: cover;
   }
 
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 99999;
+}
+
+.spinner-border {
+    height: 4em;
+    width: 4em
+}
