--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
     width: 100vw;
     height: 100vh;
     background: linear-gradient( rgba(43, 15, 30, 0.9), rgba(15, 23, 43, .9) ),
-    url('./Assets/bg-login.jpg');
+    url('./Assets/login-bg.JPG');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
