--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,20 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* user profile */
+.user_header {
+  min-width: 90vw;
+  height: 20vh;
+  background: linear-gradient(rgba(43, 15, 30, 0.9), rgba(15, 23, 43, .9)),
+    url('./Assets/black-couple.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+.profile_img {
+  width: 140px;
+}
