--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,72 @@
   background-size: cover;
 }
 
+/*** Navbar ***/
+.navbar-dark .navbar-nav .nav-link {
+  position: relative;
+  margin-left: 25px;
+  padding: 35px 0;
+  font-size: 15px;
+  color: var(--light) !important;
+  text-transform: uppercase;
+  font-weight: 500;
+  outline: none;
+  transition: 0.5s;
+}
+
+.sticky-top.navbar-dark .navbar-nav .nav-link {
+  padding: 20px 0;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link.active,
+.text-custom-main,
+.breadcrumb a.active,
+.breadcrumb a:hover,
+.footer a.active {
+  color: var(--primary) !important;
+}
+
+.navbar-dark .navbar-brand img {
+  max-height: 60px;
+  transition: 0.5s;
+}
+
+.sticky-top .navbar-dark .navbar-brand img {
+  max-height: 45px;
+}
+
+
+/*** Navbar ***/
+/* .navbar .nav-link {
+  position: relative;
+  display: fixed !important;
+  font-size: 15px;
+  color: var(--light) !important;
+  text-transform: uppercase;
+  font-weight: 500;
+  outline: none;
+  transition: 0.5s;
+}
+
+.sticky-top .navbar .nav-link {
+  padding: 20px 0;
+}
+
+
+.navbar-dark .navbar-brand img {
+  max-height: 60px;
+  transition: 0.5s;
+}
+
+
+.dashboard {
+  position: ab;
+} */
+
+
 .sidebar {
-  
+  position: fixed;
 }
 .loader {
   position: absolute;
