feats: revamp sidebar and created sidebar data

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .login-background {
   width: 100vw;
   height: 100vh;
@@ -12,73 +18,9 @@
   background-size: cover;
 }
 
-/*** Navbar ***/
-.navbar-dark .navbar-nav .nav-link {
-  position: relative;
-  margin-left: 25px;
-  padding: 35px 0;
-  font-size: 15px;
-  color: var(--light) !important;
-  text-transform: uppercase;
-  font-weight: 500;
-  outline: none;
-  transition: 0.5s;
-}
-
-.sticky-top.navbar-dark .navbar-nav .nav-link {
-  padding: 20px 0;
-}
-
-.navbar-dark .navbar-nav .nav-link:hover,
-.navbar-dark .navbar-nav .nav-link.active,
-.text-custom-main,
-.breadcrumb a.active,
-.breadcrumb a:hover,
-.footer a.active {
-  color: var(--primary) !important;
-}
-
-.navbar-dark .navbar-brand img {
-  max-height: 60px;
-  transition: 0.5s;
-}
-
-.sticky-top .navbar-dark .navbar-brand img {
-  max-height: 45px;
-}
 
 
-/*** Navbar ***/
-/* .navbar .nav-link {
-  position: relative;
-  display: fixed !important;
-  font-size: 15px;
-  color: var(--light) !important;
-  text-transform: uppercase;
-  font-weight: 500;
-  outline: none;
-  transition: 0.5s;
-}
 
-.sticky-top .navbar .nav-link {
-  padding: 20px 0;
-}
-
-
-.navbar-dark .navbar-brand img {
-  max-height: 60px;
-  transition: 0.5s;
-}
-
-
-.dashboard {
-  position: ab;
-} */
-
-
-.sidebar {
-  position: fixed;
-}
 .loader {
   position: absolute;
   top: 50%;
@@ -87,15 +29,13 @@
   z-index: 99999;
 }
 
+
+/* button spinner */
 .spinner-border {
   height: 4em;
   width: 4em
 }
 
-.error {
-  color: red;
-  font-size: 8px;
-}
 
 .spinner {
   animation: spin infinite 5s linear;
@@ -113,6 +53,12 @@
     transform: rotate(360deg);
   }
 }
+
+.error {
+  color: red;
+  font-size: 8px;
+}
+
 
 
 /* user profile */
