feats: hide sidebar on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@
   font-family: Roboto;
 }
 
+.sticky-top {
+  position: fixed;
+  top: 0;
+}
+
 .login-background {
   width: 100vw;
   height: 100vh;
