--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,23 @@
   font-size: 8px;
 }
 
+/* sidebar styling */
 
+.menu-item:hover > .tooltip {
+  display: block;
+}
+.tooltip {
+  display: none;
+  position: absolute;
+  left: 99%;
+  bottom: 80%;
+  width: auto;
+  padding: 4px 8px;
+  border-radius: 15px 15px 15px 0;
+  white-space: nowrap;
+  background-color: gray;
+  color: white;
+}
 
 /* user profile */
 .user_header {
