--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@
 }
 
 
+.SidebarList #active {
+  background-color: #e4043c;
+  color: #fff;
+}
 
 
 .loader {
@@ -69,9 +73,10 @@
 
 /* sidebar styling */
 
-.menu-item:hover > .tooltip {
+.menu-item:hover>.tooltip {
   display: block;
 }
+
 .tooltip {
   display: none;
   position: absolute;
