--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,17 @@
   z-index: 99999;
 }
 
+.overlay {
+  position: fixed; /* Sit on top of the page content */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.6) /* Black background with opacity */
+}
+
 
 /* button spinner */
 .spinner-border {
