feats: revamp marketplace + working on setting page

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@
   font-family: Roboto;
 }
 
+/**********Login page **************/
+.phone {
+  
+}
+
+
 .sticky-top {
   position: fixed;
   top: 0;
