--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,12 @@ select::after {
   background-size: cover;
 }
 
+/********** Wallet ***********/
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
